added a new blog

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -2,7 +2,7 @@
 
 <ul class="social-media">
   <li>
-    <a href="https://github.com/silviafei" class="tooltipped tooltipped-se" aria-label="GitHub">
+    <a href="https://github.com/silviafey" class="tooltipped tooltipped-se" aria-label="GitHub">
       {% octicon octoface height:20 fill:#ffffff aria-label:GitHub %}
     </a>
   </li>
