Updated site: added news page, deleted experience page; revised content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,4 @@
 <p class="disclaimer">&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
 
 
-<p class="disclaimer"> Made with <i class="em em-heart" aria-role="presentation" aria-label="HEAVY BLACK HEART"></i>
-&& <i class="em em-coffee" aria-role="presentation" aria-label="HOT BEVERAGE"></i> in Toronto, Canada </p>
+<p class="disclaimer"> Made with <i class="em em-heart" aria-role="presentation" aria-label="HEAVY BLACK HEART"></i> in Toronto, Canada </p>
