--- a/_includes/header-links.html
+++ b/_includes/header-links.html
@@ -1,13 +1,16 @@
 <ul>
 	<li>
-		<a href="{{ '/about' | prepend: site.url }}">About</a><span>/</span>
+		<a href="{{ '/about' | prepend: site.url }}">ABOUT</a><span>/</span>
 	</li>
 	<li>
-		<a href="{{ '/experience' | prepend: site.url}}">Experience</a><span>/</span>
+		<a href="{{ '/news' | prepend: site.url}}">NEWS</a><span>/</span>
 	</li>
 	<li>
-		<a href="{{ '/projects' | prepend: site.url}}">Projects</a><span>/</span>
+		<a href="{{ '/projects' | prepend: site.url}}">PROJECTS</a><span>/</span>
 	<li>
-		<a href="{{ '/archive' | prepend: site.url }}">Archive</a><span>/</span>
+		<a href="{{ '/archive' | prepend: site.url }}">ARCHIVE</a><span>/</span>
+	</li>
+	<li>
+		<a href="{{ '/honors' | prepend: site.url}}">AWARDS & HONORS</a><span>/</span>
 	</li>
 </ul>
