--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
     </head>
     <body class="{{ site.basetheme }}">
         <header class="main-header">
-            <div class="wc-container">
+            <div class="wc-container brief">
                 <h1><a href="/">{{ site.name }}</a></h1>
                 <h4>{{ site.description }}</h4>
                 {% include header-links.html %}
@@ -45,6 +45,9 @@
                 </div>
                 <div class="column two">
                     {% include social.html %}
+                </div>
+                <div class="column three">
+                    <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5nb6m8drl58&amp;m=0c&amp;c=610808&amp;cr1=ff0000&amp;f=georgia&amp;l=1&amp;s=170&amp;bv=50&amp;cw=1c5b9c&amp;cb=db8b2c" async="async"></script>
                 </div>
             </div>
             <p class="wc-container disclaimer">
