--- a/assets/css/_sass/partials/_variables.scss
+++ b/assets/css/_sass/partials/_variables.scss
@@ -26,5 +26,8 @@ $base-0F: #bc9458;
 
 
 
-// Fonts 
+// Fonts
 $primary-font: 'Ubuntu Mono', "Helvetica Neue", Helvetica, Arial, sans-serif;
+//$Serif: 'Roboto Slab', serif;
+$Serif: "freight-text-pro", Georgia, Times, serif;
+$Monospace: 'Roboto Mono', monospace;
