--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -743,6 +743,119 @@ tbody tr:nth-child(odd) th {
   margin-right: 15px;
 }
 
+.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col,
+.col-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md,
+.col-md-auto {
+  position: relative;
+  width: 100%;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px; }
+
+  .col {
+    flex-basis: 0;
+    flex-grow: 1;
+    max-width: 100%; }
+
+  .col-auto {
+    flex: 0 0 auto;
+    width: auto;
+    max-width: none; }
+
+  .col-1 {
+    flex: 0 0 8.33333%;
+    max-width: 8.33333%; }
+
+  .col-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%; }
+
+  .col-3 {
+    flex: 0 0 25%;
+    max-width: 25%; }
+
+  .col-4 {
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%; }
+
+  .col-5 {
+    flex: 0 0 41.66667%;
+    max-width: 41.66667%; }
+
+  .col-6 {
+    flex: 0 0 50%;
+    max-width: 50%; }
+
+  .col-7 {
+    flex: 0 0 58.33333%;
+    max-width: 58.33333%; }
+
+  .col-8 {
+    flex: 0 0 66.66667%;
+    max-width: 66.66667%; }
+
+  .col-9 {
+    flex: 0 0 75%;
+    max-width: 75%; }
+
+  .col-10 {
+    flex: 0 0 83.33333%;
+    max-width: 83.33333%; }
+
+  .col-11 {
+    flex: 0 0 91.66667%;
+    max-width: 91.66667%; }
+
+  .col-12 {
+    flex: 0 0 100%;
+    max-width: 100%; }
+
+  @media (min-width: 768px) {
+    .col-md {
+      flex-basis: 0;
+      flex-grow: 1;
+      max-width: 100%; }
+    .col-md-auto {
+      flex: 0 0 auto;
+      width: auto;
+      max-width: none; }
+    .col-md-1 {
+      flex: 0 0 8.33333%;
+      max-width: 8.33333%; }
+    .col-md-2 {
+      flex: 0 0 16.66667%;
+      max-width: 16.66667%; }
+    .col-md-3 {
+      flex: 0 0 25%;
+      max-width: 25%; }
+    .col-md-4 {
+      flex: 0 0 33.33333%;
+      max-width: 33.33333%; }
+    .col-md-5 {
+      flex: 0 0 41.66667%;
+      max-width: 41.66667%; }
+    .col-md-6 {
+      flex: 0 0 50%;
+      max-width: 50%; }
+    .col-md-7 {
+      flex: 0 0 58.33333%;
+      max-width: 58.33333%; }
+    .col-md-8 {
+      flex: 0 0 66.66667%;
+      max-width: 66.66667%; }
+    .col-md-9 {
+      flex: 0 0 75%;
+      max-width: 75%; }
+    .col-md-10 {
+      flex: 0 0 83.33333%;
+      max-width: 83.33333%; }
+    .col-md-11 {
+      flex: 0 0 91.66667%;
+      max-width: 91.66667%; }
+    .col-md-12 {
+      flex: 0 0 100%;
+      max-width: 100%; }
+    }
 /* -----------------------------------
 
   Experience
