--- a/_includes/footer-links.html
+++ b/_includes/footer-links.html
@@ -1,4 +1,4 @@
-<h6>Few more links</h6>
+<!-- <h6>Few more links</h6>
 <ul class="menu">
   <li><a href="{{ '/miscellaneous' | prepend: site.url }}">Miscellaneous</a></li><span>|</span>
-</ul>
+</ul> -->
