--- a/_includes/header-links.html
+++ b/_includes/header-links.html
@@ -1,16 +1,19 @@
 <ul>
-	<li>
-		<a href="{{ '/about' | prepend: site.url }}">ABOUT</a><span>/</span>
-	</li>
-	<li>
-		<a href="{{ '/news' | prepend: site.url}}">NEWS</a><span>/</span>
-	</li>
-	<li>
-		<a href="{{ '/projects' | prepend: site.url}}">PROJECTS</a><span>/</span>
 	<!-- <li>
-		<a href="{{ '/archive' | prepend: site.url }}">ARCHIVE</a><span>/</span>
+		<a href="{{ '/about' | prepend: site.url }}">ABOUT</a><span>/</span>
 	</li> -->
 	<li>
-		<a href="{{ '/honors' | prepend: site.url}}">AWARDS & HONORS</a><span>/</span>
+		<a href="{{ '/news' | prepend: site.url}}">News</a><span>/</span>
+	</li>
+	<li>
+		<a href="{{ '/projects' | prepend: site.url}}">Projects</a><span>/</span>
+	<li>
+		<a href="{{ '/publications' | prepend: site.url }}">Publications</a><span>/</span>
+	</li>
+	<li>
+		<a href="{{ '/honors' | prepend: site.url}}">Awards & Honors</a><span>/</span>
+	</li>
+	<li>
+		<a href="{{ '/misc' | prepend: site.url}}">Miscellaneous</a><span>/</span>
 	</li>
 </ul>
