Update website content

--- a/_includes/header-links.html
+++ b/_includes/header-links.html
@@ -11,9 +11,9 @@
 		<a href="{{ '/publications' | prepend: site.url }}">Publications</a><span>/</span>
 	</li>
 	<li>
-		<a href="{{ '/honors' | prepend: site.url}}">Awards & Honors</a><span>/</span>
+		<a href="{{ '/teaching' | prepend: site.url }}">Teaching</a><span>/</span>
 	</li>
 	<li>
-		<a href="{{ '/misc' | prepend: site.url}}">Miscellaneous</a><span>/</span>
+		<a href="{{ '/honors' | prepend: site.url}}">Awards & Honors</a><span>/</span>
 	</li>
 </ul>
