--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="page-content wc-container">
 	<div class="post">
-		<h1 style="text-decoration: underline;">{{ page.title }}</h1>
+		<!-- <h1 style="text-decoration: underline;">{{ page.title }}</h1> -->
 		<div class="post">
 			{{ content }}
 		</div>
