--- a/assets/css/_sass/partials/_variables.scss
+++ b/assets/css/_sass/partials/_variables.scss
@@ -28,7 +28,7 @@ $base-0G: #FCFBFA;
 
 
 // Fonts
-$primary-font: 'Ubuntu Mono', "Helvetica Neue", Helvetica, Arial, sans-serif;
-//$Serif: 'Roboto Slab', serif;
-$Serif: "freight-text-pro", Georgia, Times, serif;
-$Monospace: 'Roboto Mono', monospace;
+$primary-font: 'Ubuntu Mono', sans-serif;
+$Serif: 'Roboto Slab', serif;
+// $Serif: "freight-text-pro", Georgia, Times, serif;
+// $Monospace: 'Roboto Mono', monospace;
