--- a/assets/css/_sass/partials/_variables.scss
+++ b/assets/css/_sass/partials/_variables.scss
@@ -29,6 +29,6 @@ $base-0G: #FCFBFA;
 
 // Fonts
 $primary-font: 'Ubuntu Mono', sans-serif;
-$Serif: 'Roboto Slab', serif;
+// $Serif: 'Roboto Slab', serif;
 // $Serif: "freight-text-pro", Georgia, Times, serif;
 // $Monospace: 'Roboto Mono', monospace;
