--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -35,7 +35,7 @@ body {
   background-color: $base-0G;
   font: {
     size: 100%;
-    family: $Serif; // variables inside partials > _variables.scss
+    family: $primary-font; // variables inside partials > _variables.scss
   }
 }
 
