Try to fix font not display issue

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,8 @@
         <!-- Harmony styles -->
         <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
 
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet"> 
+
         <!-- Modernizr js -->
         <script async src="/assets/js/modernizr.js"></script>
 
