--- a/_includes/header-links.html
+++ b/_includes/header-links.html
@@ -8,11 +8,11 @@
 	<li>
 		<a href="{{ '/publications' | prepend: site.url }}">Publications</a><span>/</span>
 	</li>
-	<li>
+	<!-- <li>
 		<a href="{{ '/projects' | prepend: site.url}}">Projects</a><span>/</span>
-	</li>
+	</li> -->
 	<li>
-		<a href="{{ '/teaching' | prepend: site.url }}">Teaching</a><span>/</span>
+		<a href="{{ '/teaching' | prepend: site.url }}">Teaching & Services</a><span>/</span>
 	</li>
 	<li>
 		<a href="{{ '/honors' | prepend: site.url}}">Awards & Honors</a><span>/</span>
